--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="card-deck">
           <div class="row">
             <div class="col-sm-4 d-inline-flex">
-              <div class="card card-special">
+              <div class="card">
                 <img class="card-img-top" src="./src/index/like.webp" alt="просто пикча" />
                 <div class="card-body">
                   <div class="card-title">
@@ -314,7 +314,7 @@
               </div>
             </div>
             <div class="col-sm-8 d-inline-flex">
-              <div class="card card-special linked">
+              <div class="card linked">
                 <a href="https://github.com/kotru21/kotikov" style="text-decoration: none">
                   <img class="card-img-bottom" loading="lazy" src="./src/index/gh.webp" alt="GitHub preview pic" />
                   <div class="card-body">
@@ -371,37 +371,49 @@
           <div class="card-deck">
             <div class="row">
               <div class="carousel-item active">
-                <div class="col-xl-6 mx-auto">
-                  <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
-                    <img class="card-img-bottom" loading="lazy" src="./src/index/inst.webp" alt="Основной аккаунт." />
+                <div class="col-sm-4 d-inline-flex">
+                  <div class="card" style="width: 100%; margin-bottom: 1rem">
+                    <img class="card-img-bottom" loading="lazy" src="./src/index/inst.webp" alt="Structured Query Language" />
                     <div class="card-body">
-                      <div class="card-title card-title-special"><h5>Instagram</h5></div>
-                      <a href="https://instagram.com/arsenij_kotikov" class="btn btn-outline-primary bettertouch" style="float: right">Проверить</a>
-                      <p class="card-text-special">Основной аккаунт.</p>
+                      <div class="card-title">
+                        <h5>Insta</h5>
+                      </div>
+                      <p class="card-text">тут котики</p>
+                      <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">подпишись &nbsp;</div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="col-xl-6 mx-auto">
-                  <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
-                    <img class="card-img-bottom" loading="lazy" src="./src/index/capy-inst.webp" alt="Фотошопы капибар." />
+                <div class="col-sm-4 d-inline-flex">
+                  <div class="card" style="width: 100%; margin-bottom: 1rem">
+                    <img class="card-img-bottom" loading="lazy" src="./src/index/capy-inst.webp" alt="Structured Query Language" />
                     <div class="card-body">
-                      <div class="card-title card-title-special"><h5>Instagram</h5></div>
-                      <a href="https://instagram.com/somecringe.psd" class="btn btn-outline-primary bettertouch" style="float: right">Проверить</a>
-                      <p class="card-text-special">Фотошопы капибар.</p>
+                      <div class="card-title" style="opacity: 1 !important">
+                        <h5>Insta</h5>
+                      </div>
+                      <p class="card-text" style="opacity: 1 !important">фотошопы капибар</p>
+                      <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">подпишись &nbsp;</div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="col-xl-6 mx-auto">
-                  <div class="card-slider" style="margin: 0 auto; margin-bottom: 10px">
-                    <img class="card-img-bottom" loading="lazy" src="./src/index/twitch.webp" alt="Twitch" />
+                <div class="col-sm-4 d-inline-flex">
+                  <div class="card" style="width: 100%; margin-bottom: 1rem">
+                    <img class="card-img-bottom" loading="lazy" src="./src/index/twitch.webp" alt="Structured Query Language" />
                     <div class="card-body">
-                      <div class="card-title card-title-special"><h5>Twitch</h5></div>
-                      <a href="https://twitch.tv/kotru12" class="btn btn-outline-primary bettertouch" style="float: right">Проверить</a>
-                      <p class="card-text-special">Зачем? Пусть будет.</p>
+                      <div class="card-title" style="opacity: 1 !important">
+                        <h5>Twitch</h5>
+                      </div>
+                      <p class="card-text" style="opacity: 1 !important">пусть будет</p>
+                      <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">подпишись &nbsp;</div>
+                      </div>
                     </div>
                   </div>
                 </div>
