--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="card-deck">
           <div class="row">
             <div class="col-sm-4 d-inline-flex">
-              <div class="card">
+              <div class="card" style="margin-bottom: 1rem">
                 <img class="card-img-top" src="./src/index/like.webp" alt="просто пикча" />
                 <div class="card-body">
                   <div class="card-title">
