--- a/index.html
+++ b/index.html
@@ -95,6 +95,46 @@
         <img src="./src/index/stroke.svg" />
       </div>
     </div>
+    <div class="text_blur" style="height: fit-content">
+      <h2 class="h2xl text-center">Чем я занимаюсь</h2>
+      <div class="card-deck">
+        <div class="row">
+          <div class="col-sm-4 d-inline-flex mywork">
+            <div class="card" style="border: none">
+              <img class="card-img-top" src="./src/index/Code.webp" alt="Javascript" />
+              <div class="card-body">
+                <div class="card-title">
+                  <h5>Web-dev</h5>
+                </div>
+                <p class="card-text">WEB-разработка — создание WEB-приложений или WEB-сайтов.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 d-inline-flex mywork">
+            <div class="card" style="border: none">
+              <img class="card-img-top" src="./src/index/OpenSource.webp" alt="Javascript" />
+              <div class="card-body">
+                <div class="card-title">
+                  <h5>Open Source</h5>
+                </div>
+                <p class="card-text">Разработка ПО с открытым исходным кодом.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 d-inline-flex mywork">
+            <div class="card" style="border: none">
+              <img class="card-img-top" src="./src/index/brush.webp" alt="Javascript" />
+              <div class="card-body">
+                <div class="card-title">
+                  <h5>WEB-дизайн</h5>
+                </div>
+                <p class="card-text">Веб-дизайн это работа над внешним видом сайта.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="main-transparent">
       <h2 class="h2xl text-center">какие технологии я использую?</h2>
     </div>
@@ -102,7 +142,7 @@
       <div class="card-deck">
         <div class="row">
           <div class="col-sm-4 d-inline-flex">
-            <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
+            <div class="card" style="width: 100rem; margin: 0 auto; float: none">
               <img class="card-img-top" src="./src/index/JS.webp" alt="Javascript" />
               <div class="card-body">
                 <div class="card-title">
@@ -116,7 +156,7 @@
             </div>
           </div>
           <div class="col-sm-4 d-inline-flex">
-            <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
+            <div class="card" style="width: 100rem; margin: 0 auto; float: none">
               <img class="card-img-bottom" src="./src/index/CSS_HTML.webp" alt="Cascading Style Sheets & HyperText Markup Language" />
               <div class="card-body">
                 <div class="card-title">
@@ -130,7 +170,7 @@
             </div>
           </div>
           <div class="col-sm-4 d-inline-flex">
-            <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
+            <div class="card" style="width: 100rem; margin: 0 auto; float: none">
               <img class="card-img-bottom" src="./src/index/PHP_NODEJS.webp" alt="Hypertext Preprocessor & Node.js" />
               <div class="card-body">
                 <div class="card-title">
@@ -185,7 +225,7 @@
       <div class="card-deck">
         <div class="row">
           <div class="col-sm-4 d-inline-flex">
-            <div class="card" style="width: 100%; margin-bottom: 1rem">
+            <div class="card" style="width: 100%">
               <img class="card-img-bottom" loading="lazy" src="./src/index/cppSharp.webp" alt="C++ / C#" />
               <div class="card-body">
                 <div class="card-title">
@@ -199,7 +239,7 @@
             </div>
           </div>
           <div class="col-sm-4 d-inline-flex">
-            <div class="card" style="width: 100%; margin-bottom: 1rem">
+            <div class="card" style="width: 100%">
               <img class="card-img-bottom" loading="lazy" src="./src/index/bd.webp" alt="Structured Query Language" />
               <div class="card-body">
                 <div class="card-title">
@@ -213,7 +253,7 @@
             </div>
           </div>
           <div class="col-sm-4 d-inline-flex">
-            <div class="card" style="width: 100%; margin-bottom: 1rem">
+            <div class="card" style="width: 100%">
               <img class="card-img-bottom" loading="lazy" src="./src/index/Python.webp" alt="Python" />
               <div class="card-body">
                 <div class="card-title">
@@ -227,7 +267,7 @@
             </div>
           </div>
           <div class="col-sm-4 d-inline-flex">
-            <div class="card" style="width: 100%; margin-bottom: 1rem">
+            <div class="card" style="width: 100%">
               <img class="card-img-bottom" loading="lazy" src="./src/index/ReactJs.webp" alt="React.js" />
               <div class="card-body">
                 <div class="card-title">
@@ -372,7 +412,7 @@
             <div class="row">
               <div class="carousel-item active">
                 <div class="col-sm-4 d-inline-flex">
-                  <div class="card" style="width: 100%; margin-bottom: 1rem">
+                  <div class="card" style="width: 100%">
                     <img class="card-img-bottom" loading="lazy" src="./src/index/inst.webp" alt="Structured Query Language" />
                     <div class="card-body">
                       <div class="card-title">
@@ -388,7 +428,7 @@
               </div>
               <div class="carousel-item">
                 <div class="col-sm-4 d-inline-flex">
-                  <div class="card" style="width: 100%; margin-bottom: 1rem">
+                  <div class="card" style="width: 100%">
                     <img class="card-img-bottom" loading="lazy" src="./src/index/capy-inst.webp" alt="Structured Query Language" />
                     <div class="card-body">
                       <div class="card-title" style="opacity: 1 !important">
@@ -404,7 +444,7 @@
               </div>
               <div class="carousel-item">
                 <div class="col-sm-4 d-inline-flex">
-                  <div class="card" style="width: 100%; margin-bottom: 1rem">
+                  <div class="card" style="width: 100%">
                     <img class="card-img-bottom" loading="lazy" src="./src/index/twitch.webp" alt="Structured Query Language" />
                     <div class="card-body">
                       <div class="card-title" style="opacity: 1 !important">
