--- a/404.html
+++ b/404.html
@@ -21,18 +21,13 @@
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preload" href="https://kotikov.pages.dev/css/src/index/cat.webp" as="image" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.2/css/boxicons.min.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-viewport-checker/1.8.8/jquery.viewportchecker.min.js" integrity="sha512-FRX6MYITclzDyyMmSQLgZoZTfE+GLzAQpjs15adVZMY6AqhsrBLx8UZwp4FoqrrRFWY9TiaPwja7EY5fk309vw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://kotikov.pages.dev/src/js/index/ViewportAnim.js"></script>
-    <link href="https://kotikov.pages.dev/css/mobile.css" rel="stylesheet" />
     <link href="https://kotikov.pages.dev/css/404.css" rel="stylesheet" />
     <title>404 Not Found</title>
   </head>
-  <body style="background: #1d1d1d" class="progress-bar-striped progress-bar-animated">
+  <body class="progress-bar-striped progress-bar-animated">
     <div style="margin: 1rem; margin-top: 10rem">
       <div class="col-sm-4 m-auto">
         <div class="card" style="width: 90%; max-width: 50vh; margin: 0 auto; float: center">
@@ -40,11 +35,11 @@
             <h5 class="card-title" style="font-size: 10rem; text-align: center">
               <div class="container">
                 <p class="glitch">404</p>
-                <hr class="hr" style="margin-top: -1rem" />
+                <hr class="hr" />
               </div>
             </h5>
-            <p class="card-text" style="text-align: center; margin-top: -0.5rem">Кажется, что-то пошло не так.</p>
-            <div class="text-center" style="margin-top: 4rem; margin-bottom: 0.5rem">
+            <p class="card-text" style="text-align: center">Кажется, что-то пошло не так.</p>
+            <div class="text-center" style="margin-top: 4rem">
               <a href="https://kotikov.pages.dev/index.html" class="btn btn-outline-primary">Вернуться назад</a>
             </div>
           </div>
