--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
     <meta property="vk:image" content="https://kotikov.pages.dev/src/index/web_preview_VK.png" />
     <link rel="image_src" href="https://kotikov.pages.dev/src/index/web_preview.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="https://kotikov.pages.dev/favicon.ico" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="https://kotikov.pages.dev/site.webmanifest" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
