--- a/pc.html
+++ b/pc.html
@@ -122,7 +122,7 @@
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body" style="border-radius: 0.4rem !important">
-              <img loading="lazy" src="https://counts.pages.dev/web.ico" class="dsc-img rounded" alt="..." style="filter: drop-shadow(0 0 5px #0d6efd); width: 9vw" />
+              <img loading="lazy" src="https://counts.pages.dev/web.ico" class="dsc-img rounded" alt="..." style="filter: drop-shadow(0 0 5px #0d6efd)" />
               <h5 class="card-title">Сколько до 01.09</h5>
 
               <p class="card-text">Здесь можно узнать точное время до этого дня. Страшно? Мне тоже(</p>
@@ -133,7 +133,7 @@
         <div class="col-sm-6">
           <div class="card">
             <div class="card-body" style="border-radius: 0.4rem !important">
-              <img loading="lazy" src="https://letsgo.pages.dev/googlex.png" class="dsc-img rounded" alt="..." style="filter: drop-shadow(0 0 5px #0d6efd); width: 9vw" />
+              <img loading="lazy" src="https://letsgo.pages.dev/googlex.png" class="dsc-img rounded" alt="..." style="filter: drop-shadow(0 0 5px #0d6efd)" />
               <h5 class="card-title">Googlex</h5>
               <p class="card-text">Просто мемный поисковик с константной строкой поиска:D</p>
               <a onclick="CreateUrl()" class="btn btn-primary">Проверить</a>
