--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="text_blur" style="height: fit-content">
       <h2 class="h2xl text-center">Чем я занимаюсь</h2>
       <div class="card-deck">
-        <div class="row">
+        <div class="row g-4">
           <div class="col-sm-4 d-inline-flex mywork">
             <div class="card" style="border: none">
               <img class="card-img-top" src="./src/index/Code.webp" alt="Javascript" />
@@ -140,7 +140,7 @@
     </div>
     <div class="catbg">
       <div class="card-deck">
-        <div class="row">
+        <div class="row g-4">
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100rem; margin: 0 auto; float: none">
               <img class="card-img-top" src="./src/index/JS.webp" alt="Javascript" />
@@ -223,7 +223,7 @@
     </div>
     <div class="progress-bar-striped progress-bar-animated">
       <div class="card-deck">
-        <div class="row">
+        <div class="row g-4">
           <div class="col-sm-4 d-inline-flex">
             <div class="card" style="width: 100%">
               <img class="card-img-bottom" loading="lazy" src="./src/index/cppSharp.webp" alt="C++ / C#" />
