--- a/index.html
+++ b/index.html
@@ -419,9 +419,11 @@
                         <h5>Insta</h5>
                       </div>
                       <p class="card-text">тут котики</p>
-                      <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">подпишись &nbsp;</div>
-                      </div>
+                      <a href="https://instagram.com/arsenij_kotikov">
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">подпишись &nbsp;</div>
+                        </div>
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -435,9 +437,11 @@
                         <h5>Insta</h5>
                       </div>
                       <p class="card-text" style="opacity: 1 !important">фотошопы капибар</p>
-                      <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">подпишись &nbsp;</div>
-                      </div>
+                      <a href="https://instagram.com/somecringe.psd">
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">подпишись &nbsp;</div>
+                        </div>
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -451,9 +455,11 @@
                         <h5>Twitch</h5>
                       </div>
                       <p class="card-text" style="opacity: 1 !important">пусть будет</p>
-                      <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">подпишись &nbsp;</div>
-                      </div>
+                      <a href="https://twitch.tv/kotru12">
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">подпишись &nbsp;</div>
+                        </div>
+                      </a>
                     </div>
                   </div>
                 </div>
