--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <script>
+      //check IE browser by navigator.useragent
       window.onload = function () {
         function msieversion() {
           var ua = window.navigator.userAgent;
