--- a/404.html
+++ b/404.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta name="viewport" content="width=device-width" initial-scale="1.0" minimum-scale="1.0" maximum-scale="1.0" user-scalable="no" />
+    <meta
+      name="viewport"
+      content="width=device-width"
+      initial-scale="1.0"
+      minimum-scale="1.0"
+      maximum-scale="1.0"
+      user-scalable="no"
+    />
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:title" content="Арсений Котиков" key="title" />
     <meta property="og:site_name" content="Арсений Котиков" />
@@ -32,6 +39,7 @@
       <div class="col-sm-4 m-auto">
         <div class="card" style="width: 90%; max-width: 50vh; margin: 0 auto; float: center">
           <div class="card-body" style="padding-top: 6vh">
+            <img src="./src/sub/404cat.webp" style="width: 100%; margin-top: -10rem" />
             <h5 class="card-title" style="font-size: 10rem; text-align: center">
               <div class="container">
                 <p class="glitch">404</p>
