--- a/IE-warning.html
+++ b/IE-warning.html
@@ -8,10 +8,18 @@
     </h1>
     <hr />
     <div class="container">
-      <h1 style="text-align: center; /*default*/ margin: 0 auto; margin-bottom: 1%">ссылки на скачивание современных браузеров:</h1>
-      <h1 class="lnk" onclick="window.location.href = 'https://www.google.com/intl/ru/chrome/'"><img src="./src/sub/Chrome.png" />Google Chrome</h1>
-      <h1 class="lnk" onclick="window.location.href = 'https://www.microsoft.com/ru-ru/edge'"><img src="./src/sub/Edge.png" />Microsoft Edge</h1>
-      <h1 class="lnk" onclick="window.location.href = 'https://www.mozilla.org/ru/firefox/new/'"><img src="./src/sub/Firefox.png" />Mozilla Firefox</h1>
+      <h1 style="text-align: center; /*default*/ margin: 0 auto; margin-bottom: 1%">
+        ссылки на скачивание современных браузеров:
+      </h1>
+      <h1 class="lnk" onclick="window.location.href = 'https://www.google.com/intl/ru/chrome/'">
+        <img src="./src/sub/Chrome.png" />Google Chrome
+      </h1>
+      <h1 class="lnk" onclick="window.location.href = 'https://www.microsoft.com/ru-ru/edge'">
+        <img src="./src/sub/Edge.png" />Microsoft Edge
+      </h1>
+      <h1 class="lnk" onclick="window.location.href = 'https://www.mozilla.org/ru/firefox/new/'">
+        <img src="./src/sub/Firefox.png" />Mozilla Firefox
+      </h1>
     </div>
   </body>
   <script>
