--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       maximum-scale="1.0"
       user-scalable="no"
     />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:title" content="Арсений Котиков" key="title" />
     <meta property="og:site_name" content="Арсений Котиков" />
