--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </div>
       </div>
 
-      <div class="main-transparent highlighted" style="background: #1d1d1da1 !important; backdrop-filter: blur(5px)">
+      <div class="main-transparent highlighted" style="background: #1d1d1da1 !important">
         <p></p>
         <h2 class="h2xl text-center">Что я учу/планирую выучить?</h2>
         <p></p>
@@ -528,102 +528,82 @@
       <div class="main-transparent">
         <h3 class="h3 text-center">Но... тут в основном пикчи котиков...</h3>
       </div>
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-bs-ride="carousel"
+        style="margin-top: 2rem; margin-bottom: 2rem; margin: 1rem"
+      >
         <div class="carousel-inner">
-          <div class="card-deck">
-            <div class="row">
-              <div class="carousel-item active">
-                <div class="col-sm-4 d-inline-flex">
-                  <div class="card" style="width: 100%">
-                    <img
-                      class="card-img-bottom"
-                      loading="lazy"
-                      src="./src/index/inst.webp"
-                      alt="Structured Query Language"
-                    />
-                    <div class="card-body">
-                      <div class="card-title">
-                        <h5>Insta</h5>
-                      </div>
-                      <p class="card-text">тут котики</p>
-                      <a href="https://instagram.com/arsenij_kotikov">
-                        <div class="progress">
-                          <div
-                            class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
-                            role="progressbar"
-                            aria-valuenow="100"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                            style="width: 100%"
-                          >
-                            подпишись &nbsp;
-                          </div>
-                        </div>
-                      </a>
+          <div class="carousel-item active">
+            <div class="col-sm-4 d-inline-flex">
+              <div class="card" style="margin: 0 auto; float: none">
+                <img class="card-img-bottom" src="./src/index/inst.webp" alt="Hypertext Preprocessor & Node.js" />
+                <div class="card-body">
+                  <div class="card-title" style="opacity: 1">
+                    <h5>Insta</h5>
+                  </div>
+                  <p class="card-text" style="opacity: 1">Основной аккаунт</p>
+                  <div class="progress">
+                    <div
+                      class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
+                      role="progressbar"
+                      aria-valuenow="75"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 100%"
+                    >
+                      подпишись &nbsp;
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="carousel-item">
-                <div class="col-sm-4 d-inline-flex">
-                  <div class="card" style="width: 100%">
-                    <img
-                      class="card-img-bottom"
-                      loading="lazy"
-                      src="./src/index/capy-inst.webp"
-                      alt="Structured Query Language"
-                    />
-                    <div class="card-body">
-                      <div class="card-title" style="opacity: 1 !important">
-                        <h5>Insta</h5>
-                      </div>
-                      <p class="card-text" style="opacity: 1 !important">фотошопы капибар</p>
-                      <a href="https://instagram.com/somecringe.psd">
-                        <div class="progress">
-                          <div
-                            class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
-                            role="progressbar"
-                            aria-valuenow="100"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                            style="width: 100%"
-                          >
-                            подпишись &nbsp;
-                          </div>
-                        </div>
-                      </a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="col-sm-4 d-inline-flex">
+              <div class="card" style="margin: 0 auto; float: none">
+                <img class="card-img-bottom" src="./src/index/capy-inst.webp" alt="Hypertext Preprocessor & Node.js" />
+                <div class="card-body">
+                  <div class="card-title" style="opacity: 1">
+                    <h5>Insta 2</h5>
+                  </div>
+                  <p class="card-text" style="opacity: 1">Капибары.</p>
+                  <div class="progress">
+                    <div
+                      class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
+                      role="progressbar"
+                      aria-valuenow="75"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 100%"
+                    >
+                      подпишись &nbsp;
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="carousel-item">
-                <div class="col-sm-4 d-inline-flex">
-                  <div class="card" style="width: 100%">
-                    <img
-                      class="card-img-bottom"
-                      loading="lazy"
-                      src="./src/index/twitch.webp"
-                      alt="Structured Query Language"
-                    />
-                    <div class="card-body">
-                      <div class="card-title" style="opacity: 1 !important">
-                        <h5>Twitch</h5>
-                      </div>
-                      <p class="card-text" style="opacity: 1 !important">пусть будет</p>
-                      <a href="https://twitch.tv/kotru12">
-                        <div class="progress">
-                          <div
-                            class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
-                            role="progressbar"
-                            aria-valuenow="100"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                            style="width: 100%"
-                          >
-                            подпишись &nbsp;
-                          </div>
-                        </div>
-                      </a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="col-sm-4 d-inline-flex">
+              <div class="card" style="margin: 0 auto; float: none">
+                <img class="card-img-bottom" src="./src/index/twitch.webp" alt="Hypertext Preprocessor & Node.js" />
+                <div class="card-body">
+                  <div class="card-title" style="opacity: 1">
+                    <h5>Twitch</h5>
+                  </div>
+                  <p class="card-text" style="opacity: 1">Пусть будет</p>
+                  <div class="progress">
+                    <div
+                      class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
+                      role="progressbar"
+                      aria-valuenow="75"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 100%"
+                    >
+                      подпишись &nbsp;
                     </div>
                   </div>
                 </div>
@@ -651,7 +631,7 @@
         </button>
       </div>
 
-      <div class="main-transparent highlighted" style="background: #1d1d1da1 !important; backdrop-filter: blur(5px)">
+      <div class="main-transparent highlighted" style="background: #1d1d1da1 !important">
         <p></p>
         <h2 class="h2xl text-center">🔥 сайт ещё в разработке.</h2>
         <p></p>
