--- a/index.html
+++ b/index.html
@@ -544,18 +544,20 @@
                     <h5>Insta</h5>
                   </div>
                   <p class="card-text" style="opacity: 1">Основной аккаунт</p>
-                  <div class="progress">
-                    <div
-                      class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
-                      role="progressbar"
-                      aria-valuenow="75"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                      style="width: 100%"
-                    >
-                      подпишись &nbsp;
+                  <a href="https://instagram.com/arsenij_kotikov">
+                    <div class="progress">
+                      <div
+                        class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
+                        role="progressbar"
+                        aria-valuenow="75"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                        style="width: 100%"
+                      >
+                        подпишись &nbsp;
+                      </div>
                     </div>
-                  </div>
+                  </a>
                 </div>
               </div>
             </div>
@@ -569,18 +571,20 @@
                     <h5>Insta 2</h5>
                   </div>
                   <p class="card-text" style="opacity: 1">Капибары.</p>
-                  <div class="progress">
-                    <div
-                      class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
-                      role="progressbar"
-                      aria-valuenow="75"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                      style="width: 100%"
-                    >
-                      подпишись &nbsp;
+                  <a href="https://instagram.com/somecringe.psd">
+                    <div class="progress">
+                      <div
+                        class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
+                        role="progressbar"
+                        aria-valuenow="75"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                        style="width: 100%"
+                      >
+                        подпишись &nbsp;
+                      </div>
                     </div>
-                  </div>
+                  </a>
                 </div>
               </div>
             </div>
@@ -594,18 +598,20 @@
                     <h5>Twitch</h5>
                   </div>
                   <p class="card-text" style="opacity: 1">Пусть будет</p>
-                  <div class="progress">
-                    <div
-                      class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
-                      role="progressbar"
-                      aria-valuenow="75"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                      style="width: 100%"
-                    >
-                      подпишись &nbsp;
+                  <a href="https://twitch.tv/kotru12">
+                    <div class="progress">
+                      <div
+                        class="progress-bar progress-bar-striped progress-bar-animated progress-bar-sub"
+                        role="progressbar"
+                        aria-valuenow="75"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                        style="width: 100%"
+                      >
+                        подпишись &nbsp;
+                      </div>
                     </div>
-                  </div>
+                  </a>
                 </div>
               </div>
             </div>
