--- a/pc.html
+++ b/pc.html
@@ -73,41 +73,31 @@
       <div
         style="
           background-image: url('./src/pc_index/header.svg');
-          height: 100%;
+          height: 160%;
           background-repeat: no-repeat;
           background-size: cover;
         "
         class="anim"
       >
         <div class="leftcont">
-          <h1 class="h1" style="color: white">Привет</h1>
-          <hr
-            style="
-              background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, white 35%, rgba(255, 255, 255, 0.1) 100%);
-            "
-          />
-          <h2 class="h2" style="color: white">Добро пожаловать на сайт</h2>
-          <div class="contact">
-            <div class="mx-auto my-2 order-1 order-md-1 position-relative">
-              <span class="animatedtext-content">
-                <a class="bx bxl-youtube btn bigger" href="https://www.youtube.com/channel/UCOYprFCDyhHdhbtfzZNqYFQ">
-                </a>
-                <a class="bx bxl-vk btn bigger" href="https://vk.com/arsenij_kotikov"> </a>
-                <a class="bx bxl-twitter btn bigger" href="https://twitter.com/arsenij_kotikov"> </a>
-              </span>
-            </div>
-          </div>
+          <h1 class="h1" style="color: white">Привет,</h1>
+          <h1 class="h1" style="color: white">Добро</h1>
+          <h1 class="h1" style="color: white">Пожаловать</h1>
+          <h1 class="h1" style="color: white">На</h1>
+          <h1 class="h1" style="color: white">Сайт</h1>
+          <h2 class="h1" style="color: white">Здесь</h2>
+          <h2 class="h1" style="color: white">Что-то</h2>
+          <h2 class="h1" style="color: white">Есть</h2>
+          <img src="./src/pc_index/mobile_web.png" class="img" />
         </div>
       </div>
     </div>
     <div class="progress-bar-animated progress-bar-striped paddingcont"></div>
-    <img class="img" src="./src/pc_index/mobile_web.png" />
     <div class="container" style="padding-top: 3rem">
       <div class="innerh1">
         <h1 class="Contenth1 text-center Contenth1-special">Чем я занимаюсь?</h1>
         <hr />
       </div>
-
       <div class="left">
         <div class="percdivL">
           <h1 class="Contenth1"><i class="bx bx-code-alt" style="font-size: 4rem !important"></i>Web-Dev</h1>
@@ -159,9 +149,10 @@
         </h1>
         <hr />
       </div>
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
+      <img src="./src/pc_index/info.webp" style="width: 30rem; border-radius: 1rem" />
+      <div class="row w-50 float-lg-end">
+        <div class="col-sm-6 w-100">
+          <div class="card" style="margin-bottom: 2rem">
             <div class="card-body" style="border-radius: 0.4rem !important">
               <img
                 loading="lazy"
@@ -177,7 +168,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 w-100">
           <div class="card">
             <div class="card-body" style="border-radius: 0.4rem !important">
               <img
@@ -356,6 +347,10 @@
         </h1>
         <hr />
       </div>
+      <img
+        src="./src/pc_index/about-me.png"
+        style="width: 40rem; margin-left: -44rem; margin-top: 10rem; position: absolute"
+      />
       <div class="dsc-flex-container">
         <div class="dsc" style="margin-top: -0.5rem">
           <i class="bx bxl-c-plus-plus" style="font-size: 10rem; float: left; background: none"></i>
