small fixes & font

--- a/pc.html
+++ b/pc.html
@@ -80,14 +80,18 @@
         class="anim"
       >
         <div class="leftcont">
-          <h1 class="h1" style="color: white">Привет,</h1>
-          <h1 class="h1" style="color: white">Добро</h1>
-          <h1 class="h1" style="color: white">Пожаловать</h1>
-          <h1 class="h1" style="color: white">На</h1>
-          <h1 class="h1" style="color: white">Сайт</h1>
-          <h2 class="h1" style="color: white">Здесь</h2>
-          <h2 class="h1" style="color: white">Что-то</h2>
-          <h2 class="h1" style="color: white">Есть</h2>
+          <h1 class="h1" style="color: white">
+            Привет,<br />
+            Добро<br />
+            Пожаловать<br />
+            На<br />
+            Сайт
+          </h1>
+          <h2 class="h1" style="color: rgba(255, 255, 255, 0.6)">
+            Здесь<br />
+            Что-то<br />
+            Есть
+          </h2>
           <img src="./src/pc_index/mobile_web.png" class="img" />
         </div>
       </div>
