--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="row g-4">
           <div class="col-sm-4 d-inline-flex mywork">
             <div class="card" style="border: none">
-              <img class="card-img-top" src="./src/index/Code.webp" alt="Javascript" />
+              <img class="card-img-top" src="./src/index/Code.webp" alt="Web-разработк" />
               <div class="card-body">
                 <div class="card-title">
                   <h5>Web-dev</h5>
