--- a/pc.html
+++ b/pc.html
@@ -80,38 +80,41 @@
     <div class="header">
       <div class="content">
         <nav class="navbar navbar-expand-lg bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">Kotikov</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Главная</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled">Disabled</a>
-                </li>
-              </ul>
-            </div>
+          <a class="navbar-brand" href="#">Kotikov</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Главная</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Домашняя</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Обо мне</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Проекты</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Контакты</a>
+              </li>
+            </ul>
           </div>
         </nav>
-        <h1 style="font-family: 'Minomu Regular'; font-weight: normal; font-size: 42px">Добро пожаловать</h1>
+        <div style="margin-top: 8rem">
+          <h1>Добро пожаловать</h1>
+        </div>
       </div>
     </div>
   </body>
