--- a/pc.html
+++ b/pc.html
@@ -119,11 +119,11 @@
         </nav>
 
         <div style="margin-top: 8rem">
-          <h1 style="max-width: 10rem; font-size: 12vh; position: relative">Добро пожаловать</h1>
+          <h1 class="youre-welcome" style="max-width: 10rem; position: relative">Добро пожаловать</h1>
 
           <div style="position: absolute; bottom: 0; color: white; opacity: 0.8; z-index: 1">
-            <h1 class="cubefont" style="font-size: 4rem; text-align: right">Arsenij</h1>
-            <h1 class="cubefont" style="font-size: 16rem">Kotikov</h1>
+            <h1 class="cubefont arsenij" style="font-size: 4rem; text-align: right">Arsenij</h1>
+            <h1 class="cubefont kotikov" style="font-size: 16rem">Kotikov</h1>
           </div>
           <span
             style="
@@ -138,18 +138,28 @@
               z-index: 0;
             "
           ></span>
-          <img
-            src="./src/pc_index/orange-special.webp"
-            style="position: absolute; right: 9rem; bottom: 0rem; width: 30%; z-index: 2"
-          />
+          <img src="./src/pc_index/orange-special.webp" class="orange-image" />
         </div>
       </div>
     </div>
-    <div class="header" style="background: black; z-index: 1; position: relative">
+    <div class="header" style="background: black; position: relative">
       <div class="content">
         <div style="color: white; padding-top: 3rem">
-          <h1 style="font-size: 12vh">Привет!</h1>
+          <h1 class="youre-welcome">Привет!</h1>
           <p>ыыыыыыыыы<br />ыыыыы</p>
+          <div
+            style="
+              position: absolute;
+              right: 0;
+              bottom: 0;
+              height: 5rem;
+              width: 100%;
+              background: white;
+              padding: 0.2rem;
+            "
+          >
+            <div style="position: relative; height: 100%; background: black"></div>
+          </div>
           <div
             style="position: absolute; right: 0; height: 100%; top: 0; width: 25rem; background: white; padding: 0.2rem"
           >
